build: Update to Java 21
Co-authored-by: Alf <62615304+alf-melmac@users.noreply.github.com>